@@ -100,7 +100,7 @@ nk_draw_property(struct nk_command_buffer *out, const struct nk_style_property *
         case NK_STYLE_ITEM_COLOR:
             text.background = background->data.color;
             nk_fill_rect(out, *bounds, style->rounding, nk_rgb_factor(background->data.color, style->color_factor));
-            nk_stroke_rect(out, *bounds, style->rounding, style->border, nk_rgb_factor(background->data.color, style->color_factor));
+            nk_stroke_rect(out, *bounds, style->rounding, style->border, nk_rgb_factor(style->border_color, style->color_factor));
             break;
     }
 
